<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright © 2016-2017 Shawn Baker using the MIT License. -->
<resources>
    <string name="about">About</string>
    <string name="address">Address</string>
    <string name="all_networks">all networks</string>
    <string name="app_name">RPi Camera Viewer</string>
    <string name="bits_per_second">Bits per second</string>
    <string name="camera">Camera</string>
    <string name="camera_name">Camera Name</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="closing_video">Closing video connection...</string>
    <string name="color">Color</string>
    <string name="connection_defaults">Connection\nDefaults</string>
    <string name="connection_type">Connection Type</string>
    <string-array name="connection_types">
        <item>@string/tcp_ip</item>
        <item>@string/http</item>
        <item>@string/multicast</item>
    </string-array>
    <string name="continue1">Continue</string>
    <string name="default_camera_name">Default Camera Name</string>
    <string name="default_multicast_address">224.0.0.1</string>
    <string name="default_port">Default Port</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="done">Done</string>
    <string name="dont_set">don\'t set</string>
    <string name="edit">Edit</string>
    <string name="email">Email</string>
    <string name="email_address">support@frozen.ca</string>
    <string name="email_log_files">Email Log Files</string>
    <string name="error_bad_address">The address is not a valid URL.</string>
    <string name="error_bad_bps">The bits per second must be a positive number or empty.</string>
    <string name="error_bad_fps">The frames per second must be a positive number or empty.</string>
    <string name="error_bad_height">The height must be a positive number or empty.</string>
    <string name="error_bad_port" formatted="false">The port number must be between %d and %d.</string>
    <string name="error_bad_timeout" formatted="false">The scan timeout must be between %d and %d.</string>
    <string name="error_bad_width">The width must be a positive number or empty.</string>
    <string name="error_bad_multicast_address">The multicast address must be between 224.0.0.0 and 239.0.0.0</string>
    <string name="error_couldnt_connect">Couldn\'t connect to the camera.</string>
    <string name="error_lost_connection">Lost the connection to the camera.</string>
    <string name="error_name_already_exists">That name already exists.</string>
    <string name="error_no_camera_name">You must enter a camera name.</string>
    <string name="error_no_name">You must enter a name.</string>
    <string name="error_no_network">There is no local network.</string>
    <string name="error_no_address">You must enter an address.</string>
    <string name="error_no_port">You must enter a port number.</string>
    <string name="file_1">File 1</string>
    <string name="file_2">File 2</string>
    <string name="file_provider">ca.frozen.rpicameraviewer.fileprovider</string>
    <string name="frames_per_second">Frames per second</string>
    <string name="general">General</string>
    <string name="height">Height</string>
    <string name="help">Help</string>
    <string name="help_info">This program plays the raw H.264 video from a Raspberry Pi.\n\n
        Use the <b>raspivid</b> program to generate the video stream and the <b>nc</b> program to send
        the stream out over a specific port.\n\n
        For example, to stream 1280x720 video at 15 frames per second over port 5001, you would do:\n\n
        raspivid -n -ih -t 0 -rot 0 -w 1280 -h 720 -b 1000000 -fps 15 -o - | nc -lkv4 5001
    </string>
    <string name="http">HTTP</string>
    <string name="http_defaults">HTTP Defaults</string>
    <string name="image_saved">Saved to the %s album.</string>
    <string name="initializing_video">Initializing video...</string>
    <string name="license">
        Copyright \u00a9 2016-2017 Shawn Baker\n\n
        Raspberry image by <a href="http://www.how-to-draw-funny-cartoons.com">Martin Bérubé</a>\n
        Camera image by <a href="http://www.oxygen-icons.org">Oxygen Team</a>\n\n
        This is an open source program.\n
        It\'s available on <a href="https://github.com/ShawnBaker/RPiCameraViewer">github</a>
        under the <a href="https://opensource.org/licenses/MIT">MIT License</a>
	</string>
    <string name="loading">Loading...</string>
    <string name="log_files">Log Files</string>
    <string name="multicast">Multicast</string>
    <string name="multicast_defaults">Multicast Defaults</string>
    <string name="name">Name</string>
    <string name="network">Network</string>
    <string name="no">No</string>
    <string name="no_cameras">There are no cameras.</string>
    <string name="no_file_1">Log file 1 doesn\'t exist.</string>
    <string name="no_file_2">Log file 2 doesn\'t exist.</string>
    <string name="no_network">no\nnetwork</string>
    <string name="num_new_cameras_found" formatted="false">Number of new cameras found: %d</string>
    <string name="ok">OK</string>
    <string name="ok_to_clear_logs">Are you sure you want to delete the contents of the log files?</string>
    <string name="ok_to_delete_all_cameras">Are you sure you want to delete all the cameras?</string>
    <string name="ok_to_delete_camera">Are you sure you want to delete this camera?</string>
    <string name="position">Position</string>
    <string name="port">Port</string>
    <string name="raw_multicast">Multicast raw H.264</string>
    <string name="raw_tcp_ip">TCP/IP raw H.264</string>
    <string name="raw_http">HTTP raw H.264</string>
    <string name="save">SAVE</string>
    <string name="scan">Scan</string>
    <string name="scan_timeout">Scan Timeout</string>
    <string name="scanning_for_cameras"><b>Scanning for Cameras</b></string>
    <string name="scanning_on_ports" formatted="false">Scanning on ports %d and %d</string>
    <string name="settings">Settings</string>
    <string name="settings_cameras">cameras</string>
    <string name="settings_settings">settings</string>
    <string name="show_cameras_for">Show Cameras For</string>
    <string-array name="show_camera_types">
        <item>Current network</item>
        <item>All networks</item>
    </string-array>
    <string name="source">Source</string>
    <string name="tcp_ip">TCP/IP</string>
    <string name="tcp_ip_defaults">TCP/IP Defaults</string>
    <string name="unknown_network">unknown\nnetwork</string>
    <string name="use_default_hint">use default</string>
    <string name="use_stream_height">use stream height</string>
    <string name="use_stream_width">use stream width</string>
    <string name="version">Version</string>
    <string name="video">Video</string>
    <string name="warning_multicast_address">The multicast address should be between 239.0.0.0 and 239.255.255.255.</string>
    <string name="width">Width</string>
    <string name="yes">Yes</string>
</resources>
