<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright © 2017 Shawn Baker using the MIT License. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".activities.LogFilesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/log_file_1"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:textColor="@color/textcolor"
            android:text="@string/file_1" />

        <Button
            android:id="@+id/log_file_2"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:textColor="@color/textcolor"
            android:layout_marginLeft="8dp"
            android:text="@string/file_2" />

        <Button
            android:id="@+id/log_file_clear"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:textColor="@color/textcolor"
            android:layout_marginLeft="8dp"
            android:text="@string/clear" />

        <Button
            android:id="@+id/log_file_email"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:textColor="@color/textcolor"
            android:layout_marginLeft="8dp"
            android:text="@string/email" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" >

        <TextView
            android:id="@+id/log_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp" />

    </ScrollView>

</LinearLayout>