<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/activity_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".CameraActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:text="@string/name"
            android:layout_width="@dimen/camera_prompt_width"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/camera_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textCapWords" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp" >

        <TextView
            android:text="@string/address"
            android:layout_width="@dimen/camera_prompt_width"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/camera_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp" >

        <TextView
            android:text="@string/port"
            android:layout_width="@dimen/camera_prompt_width"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/camera_port"
            android:ems="4"
            android:maxEms="4"
            android:maxLength="5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp" >

        <Button
            android:id="@+id/camera_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/save" />

    </LinearLayout>

</LinearLayout>
