<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/activity_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	tools:context=".activities.SettingsActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:text="@string/camera_name"
                android:layout_width="@dimen/prompt_width"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/settings_camera_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textCapWords" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal" >

            <TextView
                android:text="@string/position"
                android:layout_width="@dimen/prompt_indented_width"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/prompt_indent"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/settings_camera_name_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/name_positions" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:text="@string/color"
                android:layout_width="@dimen/prompt_indented_width"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/prompt_indent"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/settings_camera_name_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:maxEms="6"
                android:maxLength="8"
                android:digits="0123456789ABCDEF"
                android:inputType="textCapCharacters"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal" >

            <TextView
                android:text="@string/show_cameras"
                android:layout_width="@dimen/prompt_width"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/settings_show_cameras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/show_camera_types" />

        </LinearLayout>

        <fragment
            android:name="ca.frozen.rpicameraviewer.activities.SourceFragment"
            android:id="@+id/settings_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>